tests/reference/run-continue_compilation_2-3499257.stderr
semantic error: shape argument specified in c_f_pointer even though fptr is not an array.
  --> tests/errors/continue_compilation_2.f90:54:38
   |
54 |     call c_f_pointer(queries_1, y_1, [2])
   |                                      ^^^ 

semantic error: shape array passed to c_f_pointer must be of rank 1 but given rank is 2
  --> tests/errors/continue_compilation_2.f90:56:38
   |
56 |     call c_f_pointer(queries_2, y_2, shape)
   |                                      ^^^^^ 

semantic error: Cannot assign to a constant variable
  --> tests/errors/continue_compilation_2.f90:58:5
   |
58 |     x = 1
   |     ^^^^^ assignment here
   |
32 |     integer, parameter :: x = 2
   |                           ~~~~~ declared as constant

semantic error: More actual than formal arguments in procedure call
  --> tests/errors/continue_compilation_2.f90:61:33
   |
61 |     call myCircle%calculateArea(circleArea, 12)
   |                                 ^^^^^^^^^^^^^^ 

semantic error: Invalid argument `end` supplied
  --> tests/errors/continue_compilation_2.f90:63:5
   |
63 |     CLOSE(end=200)
   |     ^^^^^^^^^^^^^^ 

semantic error: The first argument of `cmplx` intrinsic must be present
  --> tests/errors/continue_compilation_2.f90:65:9
   |
65 |     a = cmplx(y = 2)
   |         ^^^^^^^^^^^^ 

semantic error: Coarrays are not supported yet
  --> tests/errors/continue_compilation_2.f90:71:11
   |
71 |     val = this_image ()
   |           ^^^^^^^^^^^^^ 

semantic error: Coarrays are not supported yet
  --> tests/errors/continue_compilation_2.f90:72:5
   |
72 |     call co_sum (val, result_image=1)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Coarrays are not supported yet
  --> tests/errors/continue_compilation_2.f90:73:9
   |
73 |     if (this_image() == 1) then
   |         ^^^^^^^^^^^^ 

semantic error: Coarrays are not supported yet
  --> tests/errors/continue_compilation_2.f90:77:5
   |
77 |     call event_query(1, 1, 1)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Operands of comparison operator are of different types
  --> tests/errors/continue_compilation_2.f90:81:9
   |
81 |     if (i > x_2) then
   |         ^^^^^^^ 

semantic error: dim has already been specified as a positional/keyword argument to size
  --> tests/errors/continue_compilation_2.f90:85:14
   |
85 |     size_a = size(a_2, 1, dim=1)
   |              ^^^^^^^^^^^^^^^^^^^ 

semantic error: dim has already been specified as a positional/keyword argument to size
  --> tests/errors/continue_compilation_2.f90:86:14
   |
86 |     size_a = size(a_2, dim = 1, 1)
   |              ^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters.
  --> tests/errors/continue_compilation_2.f90:88:31
   |
88 |     size_a_2 = size(a_3, kind=kindvar, dim=1)
   |                               ^^^^^^^ 

semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters.
  --> tests/errors/continue_compilation_2.f90:89:31
   |
89 |     size_a_2 = size(a_3, kind=kindvar)
   |                               ^^^^^^^ 

semantic error: Atomic operations are not supported yet
  --> tests/errors/continue_compilation_2.f90:91:5
   |
91 |     call atomic_add (atom[1], this_image())
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Atomic operations are not supported yet
  --> tests/errors/continue_compilation_2.f90:92:5
   |
92 |     call atomic_add (atom[2], this_image())
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Type-spec cannot contain an asterisk for a type parameter
  --> tests/errors/continue_compilation_2.f90:94:14
   |
94 |     print *, [character(*) :: "a", "b", "ball", "cat"]
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Element in `real(8)` array constructor is `real(4)`
  --> tests/errors/continue_compilation_2.f90:97:20
   |
97 |     print *, [x_3, [1., 2.]]
   |                    ^^^^^^^^ 

semantic error: Element in `integer(4)` array constructor is `real(4)`
  --> tests/errors/continue_compilation_2.f90:99:18
   |
99 |     print *, [1, 2.]
   |                  ^^ 

semantic error: Element in `integer(4)` array constructor is `real(4)`
   --> tests/errors/continue_compilation_2.f90:101:18
    |
101 |     print *, [1, [1., 2.]]
    |                  ^^^^^^^^ 

semantic error: Argument of intrinsic must be an integer
   --> tests/errors/continue_compilation_2.f90:103:14
    |
103 |     print *, dfloat(y_3)
    |              ^^^^^^^^^^^ 

semantic error: Invalid argument type for `dim` or `mask`
   --> tests/errors/continue_compilation_2.f90:105:29
    |
105 |     print *, sum([1, 2, 3], 1.1)
    |                             ^^^ 

semantic error: `mask` argument to `Sum` must be a scalar or array of logical type
   --> tests/errors/continue_compilation_2.f90:107:32
    |
107 |     print *, sum([1, 2, 3], 1, 1.1)
    |                                ^^^ 

semantic error: `dim` argument to `Sum` must be a scalar and of integer type
   --> tests/errors/continue_compilation_2.f90:109:37
    |
109 |     print *, sum([1, 2, 3], .true., 1.1)
    |                                     ^^^ 

semantic error: Too many arguments to call `dint`
   --> tests/errors/continue_compilation_2.f90:111:13
    |
111 |     print*, dint(1.0_8, 8)
    |             ^^^^^^^^^^^^^^ 

semantic error: Too many arguments to call `dint`
   --> tests/errors/continue_compilation_2.f90:112:13
    |
112 |     if (abs(dint(1.0_8, 8) - 1.0_8) > 10e-5 ) error stop
    |             ^^^^^^^^^^^^^^ 

semantic error: Argument 1 of dlgama must be of double precision real type
   --> tests/errors/continue_compilation_2.f90:114:14
    |
114 |     print *, dlgama(2.7)
    |              ^^^^^^^^^^^ 

semantic error: Too many arguments to call `dnint`
   --> tests/errors/continue_compilation_2.f90:116:13
    |
116 |     print*, dnint(1.0_8, 8)
    |             ^^^^^^^^^^^^^^^ 

semantic error: Too many arguments to call `dnint`
   --> tests/errors/continue_compilation_2.f90:117:13
    |
117 |     if (abs(dnint(1.0_8, 8) - 1.0_8) > 10e-5 ) error stop
    |             ^^^^^^^^^^^^^^^ 

semantic error: Do concurrent loop variable `j` cannot be part of local expression
   --> tests/errors/continue_compilation_2.f90:119:30
    |
119 |     do concurrent (j = 1:Ny) local(i_1, j)
    |                              ^^^^^^^^^^^^^ 

semantic error: Assignment to loop variable `i_2` is not allowed
   --> tests/errors/continue_compilation_2.f90:126:9
    |
126 |         i_2 = j_1 + 1
    |         ^^^ 

semantic error: Step expression (Increment) in DO loop cannot be zero
   --> tests/errors/continue_compilation_2.f90:132:20
    |
132 |     do i_2 = 1, 5, 0
    |                    ^ 

semantic error: Arguments to dprod must be real(4)
   --> tests/errors/continue_compilation_2.f90:136:13
    |
136 |     print*, dprod(4.23_8, 4.3_8)
    |             ^^^^^^^^^^^^^^^^^^^^ 

semantic error: Unexpected args, Dreal expects (complex64) as arguments
   --> tests/errors/continue_compilation_2.f90:139:14
    |
139 |     print *, dreal(a_4)
    |              ^^^^^^^^^^ 
